# staby

./: .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
staby/admin/: apps.py  lazy_admin.py
staby/articles/: admin.py  models.py  urls.py  views.py
staby/articles/migrations/: 0001_initial.py  0002_auto_20200506_0835.py
staby/blog/: admin.py  models.py  urls.py  views.py
staby/blog/migrations/: 0001_initial.py
staby/core/: __init__.py  admin.py  apps.py  context_processors.py  fields.py  forms.py  urls.py  widgets.py
staby/core/static/staby/js/: tiny_mce.setup.js
staby/core/templates/staby/widgets/: datepicker.html  (+1 more)
staby/core/templatetags/: pagination.py
staby/galleries/: admin.py  apps.py  models.py  urls.py  views.py  widgets.py
staby/galleries/migrations/: 0001_initial.py  0002_auto_20200425_1208.py
staby/galleries/templates/pages/: gallery.html  gallery_folder.html
staby/galleries/templates/widgets/: galleries_random_image.html
staby/galleries/templatetags/: staby_gallery.py
staby/media/: fields.py  forms.py  manager.py  sites.py  views.py
staby/media/templatetags/: media.py
staby/pages/: __init__.py  admin.py  apps.py  dispatcher.py  models.py  urls.py  utils.py
staby/pages/migrations/: 0001_initial.py  0002_auto_20200425_1422.py
staby/pages/templates/pages/: page.html
staby/pages/templates/partials/: menu.html
staby/pages/templatetags/: staby_pages.py
staby/utils/: importing.py
staby/widgets/: __init__.py  base.py
staby/widgets/templatetags/: staby_widgets.py  widgets.py
(+9 files in other folders)
