[metadata]
name = staby
version = 0.1.6
description = Django based CMS
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/netgarden/staby
author = Qilx
author_email = qilx@netgarden.org
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 2.2
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System


[options]

include_package_data = true
packages = find:

install_requires =
    Django<2.3
    django-admin-sortable2==0.7.6
    django-debug-toolbar==2.2
    django-js-asset==1.2.2
    django-mptt==0.11.0
    django-polymorphic==2.1.2
    django-polymorphic-tree==1.5.1
    django-tag-parser==3.2
    future==0.18.2
    pytz==2020.1
    sqlparse==0.3.1
    Pillow==9.0.1
python_requires = >=3.6
 
